--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -56,6 +56,8 @@
               Rooms start at $200.
           %li
             = link_to('Vagabond Lodge', 'http://www.vagabondlodge.com/', target: '_blank')
+            .subnote
+              Rooms start at ?.
           %li
             = link_to('Columbia Gorge Hotel', 'http://www.columbiagorgehotel.com/', target: '_blank')
             .subnote
@@ -74,6 +76,10 @@
             = link_to('Hood River Suites', 'http://www.hoodriversuites.com/', target: '_blank')
             .subnote
               Rooms start at $152.
+          %li
+            = link_to('Columbia Cliff Villas', 'http://www.columbiacliffvillas.com/', target: '_blank')
+            .subnote
+              Rooms start at $199.
       %h4
         Bed & Breakfasts
       .blurb
