--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -191,7 +191,8 @@
       However, Evan was working the long play. He bought a plane ticket up to Portland two weeks later to see her. After a great weekend together, they were smitten. Flash forward a year of long distance dating. Katie moved down to San Francisco, and the couple moved in to a cute apartment in Noe Valley.
     
     %p
-      = image_tag('proposal.jpg', width: '290px', class: 'left_picture')
+      %a{href: image_url('proposal.jpg')}
+        = image_tag('proposal.jpg', width: '290px', class: 'left_picture')
       In October 2014, Evan popped the question. It was a very creative proposal. Evan channeled Katie's family's craftiness and gave Katie a series of four handmade gifts over the course of six weeks. After he gave her the last one, he asked if she had solved the puzzle. "What puzzle?" It turned out, each gift represented a word in that age-old question. After a hint or two, Katie put all the pieces together, and Evan voiced the words: "Wheel ewe Mary me?"
       
     %br  
