get rid of background color of header. animate scrolling so people aren't confused that all the data is on one page.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -14,20 +14,27 @@ a {
 }
 a:link, a:visited {
   color: rgb(51, 76, 73);
+//  color: $orange;
 }
 a:hover {
   text-decoration: underline;
 }
 #header {
   height: $header_height;
-  background-color: rgba(242, 242, 242, 0.8598);
-  position: fixed;
+//  background-color: rgba(242, 242, 242, 0.8);
+//  font-family: 'Helvetica Neue', serif;
+//  font-family: 'Myriad Set Pro', 'Lucida Grande', 'Helvetica Neue', Helvetica;
+  position: absolute;
   width: 100%;
   top: 0;
   font-size: 32px;
   z-index: 2;
   line-height: 75px;
   overflow: hidden;
+  a {
+    color: rgba(255, 255, 255, 0.75);
+  }
+  
 }
 #header li {
   display: inline;
@@ -66,7 +73,7 @@ h4 {
   font-family: 'Droid Sans', sans-serif;
 }
 .white_section {
-  padding: $header_height 100px 50px 100px;
+  padding: 60px 100px 50px 100px;
 //  font-size: 24px;
   font-size: 24px;
 }
