--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,7 @@
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
     = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Roboto'
+    = stylesheet_link_tag 'http://fonts.googleapis.com/css?family=Droid+Serif'
     = stylesheet_link_tag "application", :media => "all"
     = favicon_link_tag 'favicon.ico', :rel => 'shortcut icon'
     = javascript_include_tag "application"
