--- a/app/views/rsvps/create.js.erb
+++ b/app/views/rsvps/create.js.erb
@@ -1,7 +1,2 @@
-
-<% if @rsvp.attending %>
-  $("#rsvp_form").html("<h4>Thanks <%= j(@rsvp.name) %>! Can't wait to celebrate with you!</h4>")
-<% else %>
-  $("#rsvp_form").html("<h4>Bummer <%= j(@rsvp.name) %>! We'll miss you.</h4>")
-<% end %>
+$("#rsvp_form").html("<h4>Thanks for the response <%= j(@rsvp.name) %>! </h4>")
 $('html,body').animate({scrollTop: $("#rsvp").offset().top},'slow');
