add room price for vagabond

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -57,7 +57,7 @@
           %li
             = link_to('Vagabond Lodge', 'http://www.vagabondlodge.com/', target: '_blank')
             .subnote
-              Rooms start at ?.
+              Rooms start at $90.
           %li
             = link_to('Columbia Gorge Hotel', 'http://www.columbiagorgehotel.com/', target: '_blank')
             .subnote
