add a crate & barrel registry

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -203,11 +203,11 @@
   .white_section
     %h3 Registry
     %p
-      We are currently working on filling out our registry. For now, we have a few items listed on 
-      %nbsp
-      %span>= link_to('Amazon', 'http://www.amazon.com/registry/wedding/3B8LHYEJID2KC', class: 'paragraph_link')
-      = '.'
-      Your presence with us as we celebrate is by far the most important thing, so please don't feel obligated to give a gift.  
+      Your presence with us as we celebrate is by far the most important thing, so please don't feel obligated to give a gift. If you do wish to give us a gift, and are looking for ideas, we have a couple registries.
+      %br 
+      = link_to('Amazon', 'http://www.amazon.com/registry/wedding/3B8LHYEJID2KC', class: 'paragraph_link')
+      %br
+      = link_to('Crate & Barrel', 'http://www.crateandbarrel.com/gift-registry/evan-pon-and-katie-gilmer/r5331980', class: 'paragraph_link')
       
 / #rsvp
 /   .white_section
