--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -203,11 +203,9 @@
   .white_section
     %h3 Registry
     %p
-      Your presence with us as we celebrate is by far the most important thing, so please don't feel obligated to give a gift. If you do wish to give us a gift, and are looking for ideas, we have a couple registries.
-      %br 
-      = link_to('Amazon', 'http://www.amazon.com/registry/wedding/3B8LHYEJID2KC', class: 'paragraph_link')
-      %br
-      = link_to('Crate & Barrel', 'http://www.crateandbarrel.com/gift-registry/evan-pon-and-katie-gilmer/r5331980', class: 'paragraph_link')
+      The most important thing to us is that you will make our wedding day special by just being there. However, if you wish to help us celebrate with a gift, we are registered at #{link_to('Crate & Barrel', 'http://www.crateandbarrel.com/gift-registry/evan-pon-and-katie-gilmer/r5331980', target: '_blank', class: 'paragraph_link')}, #{link_to('Amazon', 'http://www.amazon.com/registry/wedding/3B8LHYEJID2KC', target: '_blank', class: 'paragraph_link')}, and #{link_to('Thankful', 'https://thkfl.com/evanandkatie', target: '_blank', class: 'paragraph_link')}. We are planning to buy a house and any help with the ever-important household appliances is much appreciated!
+     
+      
       
 / #rsvp
 /   .white_section
