--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -155,6 +155,14 @@ input[type=checkbox] {
   float: left;
   margin-right: 17px;
 }
+#hummingbirds {
+  float: right;
+  width: 500px;
+  text-align: center;
+  margin-top: -20px;
+  margin-bottom: 50px;
+  font-size: 0.8em;
+}
 .subnote {
   font-style: italic;
   font-size: 14px;
