--- a/app/views/rsvps/create.js.erb
+++ b/app/views/rsvps/create.js.erb
@@ -1,2 +1,2 @@
-$("#rsvp_form").html("<h4>Thanks for the response <%= j(@rsvp.name) %>! </h4>")
+$("#rsvp_form").html("<h4>Thanks for the response! </h4>")
 $('html,body').animate({scrollTop: $("#rsvp").offset().top},'slow');
