--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -41,12 +41,16 @@ a:hover {
   
 }
 #header li {
-  display: inline;
-  margin: 0 50px;
+//  display: inline;
+//  margin: 0 50px;
+  display: table-cell;
+  text-align: center;
 }
 #header ul {
   margin: auto;
   text-align: center;
+  display: table;
+  width: 100%;
 }
 .clear {
   clear: both;
