add more details

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -22,26 +22,60 @@
 #venue
   .white_section
     .sidebar
-
+      %h4
+        Welcome Dinner
+      .blurb
+        Friday August 14th, 5:00 PM
+        %br
+        Waterfront Park
+        %br
+        = link_to('Google map', 'https://www.google.com/maps/d/edit?mid=z8TLq5jFAWao.kzQSPR1Ygw1c&usp=sharing', target: '_blank', class: 'paragraph_link')
+      
+      %h4
+        Ceremony & Reception
+      .blurb
+        Saturday August 15th, 4:30 PM
+        %br
+        Clarke Mountain Estate
+        %br
+        5853 Berry Dr.
+        %br
+        Parkdale OR 97041
+        %br
+        = link_to('Google map', 'https://www.google.com/maps/d/edit?mid=z8TLq5jFAWao.kVAbxcVu8690&usp=sharing', target: '_blank', class: 'paragraph_link')
+        
+      %h4
+        Farewell Picnic
+      .blurb
+        Sunday August 16th, Noon
+        %br
+        Jackson Park
+        %br
+        = link_to('Google map', 'https://www.google.com/maps/d/edit?mid=z8TLq5jFAWao.ktY_9CNyCd7Y&usp=sharing', target: '_blank', class: 'paragraph_link')
     .left_side
       %h4
-        Welcome dinner
+        Welcome Dinner
       %p.minimal
-        We'd love to welcome all of our guests to Hood River by feeding them Mexican food and blah blah blah. We will be hosting the picnic at the Waterfront Park in Hood River (#{link_to('map', 'https://www.google.com/maps/d/edit?mid=z8TLq5jFAWao.kzQSPR1Ygw1c&usp=sharing', target: '_blank', class: 'paragraph_link')}). The picnic will start at 5pm, and end at sunset. We will have Mexican food and drinks. We will have frisbees, soccer balls, kites, cornhole, other activities. The wind can be brisk there, so please dress appropriately, and practice your disc throwing in the wind. 
+        It’s fiesta time in Waterfront Park, as we welcome all our guests to Hood River for our wedding weekend. Watch the windsurfers and kite boarders, play some soccer or frisbee, and kick back with some tasty Mexican food and drinks (we’ll provide!). The park can be windy. It’s good for flying kites, but you better bring a jacket. The welcome dinner goes from 5:00 PM to sunset, so stop by anytime. Ay, ay, ay, we are so glad you’ve made it to celebrate with us!
       %br
       %h4
-        Wedding ceremony and reception
+        Wedding Ceremony and Reception
       %p.minimal
-        Our wedding will be at the Clarke Mountain Estate. This special location is the private home of a good friend of Katie's aunt, and the grounds boast beautiful flower gardens and a fantastic view of Mt. Hood. The cocktail hour and reception will follow at the same location. The wedding starts at 4:30pm. Reception starts at 6:30pm. We will have shuttles for guests staying in downtown Hood River, starting at 3pm. Dress code is semi-formal. There will be parking at the venue. Location is 5853 Berry Drive, Parkdale OR (#{link_to('map', 'https://www.google.com/maps/d/edit?mid=z8TLq5jFAWao.kVAbxcVu8690&usp=sharing', target: '_blank', class: 'paragraph_link')}). The route doesn't fully show up on Google Maps; you will need to follow the dirt road at the end of Berry Road to reach the venue. We will have balloons, signs, and maybe acrobats all pointing the way.
-    
-      %p
-        The wedding and reception will both be outdoors, and we expect it to be sunny and warm. Parkdale is about 20 minutes from the quaint town of Hood River. 
+        Here’s the important part - ceremony and vows, dinner, drinks, and dancing! Our ceremony and reception will take place at Clarke Mountain Estate in Parkdale, a 30 minute drive from downtown Hood River. The property has plenty of parking, but we will provide shuttles from downtown Hood River as well, starting at 3PM. The ceremony will begin at 4:30 PM. The dress code is semi-formal - the ceremony and reception are outside, so you might want to bring a jacket in case the wind picks up. The party will continue late into the night and then we’ll return to Hood River (shuttles will be available) for the after party!
+
+        %p
+          Officiant: Steve Reed (Katie’s uncle)
+          %br
+          Bridesmaid: Emily Sharp (Katie’s friend since kindergarten)
+          %br
+          Bridesmaid: Alice Moore (Katie’s friend since Alice’s mom coached their grade school softball team)
+          %br
+          Groomsmen: David Pon, Bryan Pon, and Steven Pon (random dudes from the street)
         
-      %br
       %h4
-        Farewell picnic
+        Farewell Picnic
       %p.minimal
-        Jackson Park (#{link_to('map', 'https://www.google.com/maps/d/edit?mid=z8TLq5jFAWao.ktY_9CNyCd7Y&usp=sharing', target: '_blank', class: 'paragraph_link')}).
+        Come by Jackson Park in Hood River to say goodbye to the newlyweds before you leave town. We’ll bring any leftover food and booze from the weekend. Bring your own favorite picnic fare and relax the afternoon away. Or just stop by to say adieu. We’re so glad you could join us to celebrate our marriage!
       
     .clear
 = image_tag('clarkes.jpg', width: '100%')
