change title to details

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
 #header
   %ul
     %li
-      = link_to 'VENUE', '#venue', {id: 'venue_link'}
+      = link_to 'DETAILS', '#details', {id: 'details_link'}
     %li
       = link_to 'RSVP', '#rsvp', {id: 'rsvp_link'}
     %li
@@ -19,7 +19,7 @@
   #date
     08/15/15
 
-#venue
+#details
   .white_section
     .sidebar
       %h4
