add hotels back in

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -117,6 +117,10 @@
       .blurb
         %ul.sidebar_links
           %li
+            = link_to('Columbia Gorge Hotel', 'http://www.columbiagorgehotel.com/', target: '_blank')
+            .subnote
+              Rooms start at $269.
+          %li
             = link_to('Hood River Hotel', 'http://www.hoodriverhotel.com/', target: '_blank')
             .subnote
               Rooms start at $200.
@@ -124,6 +128,10 @@
             = link_to('Vagabond Lodge', 'http://www.vagabondlodge.com/', target: '_blank')
             .subnote
               Rooms start at $90.
+          %li
+            = link_to('Columbia Gorge Hotel', 'http://www.columbiagorgehotel.com/', target: '_blank')
+            .subnote
+              Rooms start at $269.
           %li
             = link_to('Comfort Suites', 'http://www.comfortsuites.com/hotel-hood_river-oregon-OR066', target: '_blank')
             .subnote
@@ -162,9 +170,10 @@
       %p
         Hood River during the summer is 
         %i very
-        popular! This means that it would be best to book housing 
+        popular! Many of the hotels are already completely booked. This means that it would be best to book housing 
         %span.important
           as soon as possible.
+        Some of the hotels do periodically release new rooms to be rented, so it can be worth calling hotels that previously said they were all booked up. 
       %p
         Most homes for rent require a four (or more) night minimum during the summer. If you can stay that long, we think you'll find plenty to do! We have reserved some shuttles to help guests from downtown Hood River to the wedding venue. 
 
