add line about poor cell phone reception

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -61,7 +61,7 @@
       %h4
         Wedding Ceremony and Reception
       %p.minimal
-        Here’s the important part - ceremony and vows, dinner, drinks, and dancing! Our ceremony and reception will take place at Clarke Mountain Estate in Parkdale, a 30 minute drive from downtown Hood River. The property has plenty of parking, but we will provide shuttles from downtown Hood River as well, starting at 3PM. The ceremony will begin at 4:30 PM. The dress code is semi-formal - the ceremony and reception are outside, so you might want to bring a jacket in case the wind picks up. The party will continue late into the night and then we’ll return to Hood River (shuttles will be available) for the after party!
+        Here’s the important part - ceremony and vows, dinner, drinks, and dancing! Our ceremony and reception will take place at Clarke Mountain Estate in Parkdale, a 30 minute drive from downtown Hood River. The property has plenty of parking, but we will provide shuttles from downtown Hood River as well, starting at 3PM. Please note that cell phone reception at the venue is very poor, so coordination with anyone at the venue will be difficult. The ceremony will begin at 4:30 PM. The dress code is semi-formal - the ceremony and reception are outside, so you might want to bring a jacket in case the wind picks up. The party will continue late into the night and then we’ll return to Hood River (shuttles will be available) for the after party!
 
         %p
           Officiant: Steve Reed (Katie’s uncle)
