--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -32,6 +32,16 @@
         = link_to('Google map', 'https://www.google.com/maps/d/edit?mid=z8TLq5jFAWao.kzQSPR1Ygw1c&usp=sharing', target: '_blank', class: 'paragraph_link')
       
       %h4
+        Shuttle Stop
+      .blurb
+        Saturday August 15th, 3:00 PM, 4:00PM
+        %br
+        Parking lot on north side of State St, between 6th & 9th
+        %br
+        = link_to('Google map', 'https://www.google.com/maps/d/viewer?mid=z8TLq5jFAWao.khw0VJXKcwwg&usp=sharing', target: '_blank', class: 'paragraph_link')
+        
+      
+      %h4
         Ceremony & Reception
       .blurb
         Saturday August 15th, 4:30 PM
@@ -61,7 +71,7 @@
       %h4
         Wedding Ceremony and Reception
       %p.minimal
-        Here’s the important part - ceremony and vows, dinner, drinks, and dancing! Our ceremony and reception will take place at Clarke Mountain Estate in Parkdale, a 30 minute drive from downtown Hood River. The property has plenty of parking, but we will provide shuttles from downtown Hood River as well, starting at 3PM. Please note that cell phone reception at the venue is very poor, so coordination with anyone at the venue will be difficult. The ceremony will begin at 4:30 PM. The dress code is semi-formal - the ceremony and reception are outside, so you might want to bring a jacket in case the wind picks up. The party will continue late into the night and then we’ll return to Hood River (shuttles will be available) for the after party!
+        Here’s the important part - ceremony and vows, dinner, drinks, and dancing! Our ceremony and reception will take place at Clarke Mountain Estate in Parkdale, a 30 minute drive from downtown Hood River. The property has plenty of parking, but we will provide shuttles from downtown Hood River as well. There will be 2 shuttle departure times - one at 3pm, and one at 4pm. See the map on the sidebar for the shuttle location. If you need a cab, Gorge Yellow Cab can be reached at 800-981-7543. Please note that cell phone reception at the venue is very poor, so coordination with anyone at the venue will be difficult. The ceremony will begin at 4:30 PM. The dress code is semi-formal - the ceremony and reception are outside, so you might want to bring a jacket in case the wind picks up. Wee ones are invited, and we'll have a pop-up tent with a changing table and pack & play. The party will continue late into the night and then we’ll return to Hood River (shuttles will be available) for the after party!        
 
         %p
           Officiant: Steve Reed (Katie’s uncle)
